プラグインの名前変更、見出しブロック制作段階

--- a/src/style-01.scss
+++ b/src/style-01.scss
@@ -3,3 +3,11 @@
   color: #fff;
   padding: 2px;
 }
+
+.is-style-default {
+  border-radius: 10px;
+}
+
+.is-style-squared {
+  border-radius: 0px;
+}
